; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_transaction_management.c_InCoordinatedTransaction.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_transaction_management.c_InCoordinatedTransaction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CurrentCoordinatedTransactionState = common dso_local global i64 0, align 8
@COORD_TRANS_NONE = common dso_local global i64 0, align 8
@COORD_TRANS_IDLE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @InCoordinatedTransaction() #0 {
  %1 = load i64, i64* @CurrentCoordinatedTransactionState, align 8
  %2 = load i64, i64* @COORD_TRANS_NONE, align 8
  %3 = icmp ne i64 %1, %2
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = load i64, i64* @CurrentCoordinatedTransactionState, align 8
  %6 = load i64, i64* @COORD_TRANS_IDLE, align 8
  %7 = icmp ne i64 %5, %6
  br label %8

8:                                                ; preds = %4, %0
  %9 = phi i1 [ false, %0 ], [ %7, %4 ]
  %10 = zext i1 %9 to i32
  ret i32 %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
